--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 ### JASPER REPORTS
-jasper.path=
+jasper.path=C:\\Users\\crist\\reports
+
+
+### AWS CREDENTIALS
+aws.secret.key=2oo9raP9fsHvdi24rtw6hr5R4DoTL9PNjL0azMtB
+aws.access.key=AKIAUJBAHGQDU6ROCCHF
