--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ jasper.path=C:\\Users\\crist\\reports
 
 
 ### AWS CREDENTIALS
-aws.secret.key=2oo9raP9fsHvdi24rtw6hr5R4DoTL9PNjL0azMtB
-aws.access.key=AKIAUJBAHGQDU6ROCCHF
+aws.secret.key=
+aws.access.key=
