--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 ### JASPER REPORTS
-jasper.path=C:\\Users\\crist\\reports
+jasper.path=
 
 
 ### AWS CREDENTIALS
