--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:33066/reports
+spring.datasource.url=
 spring.datasource.password=
-spring.datasource.username=root
+spring.datasource.username=
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
